@startuml
hide empty members

class OpenNmea
class OpenNmeaImpl

OpenNmeaTest : void set_impl(std::unique_ptr<OpenNmeaImplMock> impl)

OpenNmeaImplMock : MOCK_METHOD(open)
OpenNmeaImplMock : MOCK_METHOD(is_open)
OpenNmeaImplMock : MOCK_METHOD(close)
OpenNmeaImplMock : MOCK_METHOD(take_next)
OpenNmeaImplMock : MOCK_METHOD(wait_for_data)

OpenNmeaImpl <|-- OpenNmeaImplMock
OpenNmea o-- "1" OpenNmeaImplMock
OpenNmea <|-- OpenNmeaTest
@enduml
